# code-review-agent

./: .gitignore  AGENTS.md  Makefile  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  e2e.sh  sitecustomize.py  start-backend.sh  start-frontend.sh
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  alembic.ini  data.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: celery_app.py  db.py
backend/app/api/: __init__.py  explain.py  routes.py
backend/app/core/: __init__.py  config.py  logging.py  memory.py  models.py  redis_pubsub.py
backend/app/db/: __init__.py  db.py  models.py  repository.py
backend/app/services/: cache.py  qdrant_service.py
backend/app/workers/: tasks.py
backend/cli/: __init__.py  explain.py
backend/code_explanation_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/graph/: __init__.py  graph.py  orchestrator.py  state.py
backend/graph/memory/: __init__.py  redis_checkpoint.py  semantic_cache.py  sqlite_checkpoint.py
backend/graph/nodes/: __init__.py  agent_router.py  ast_tree_sitter.py  bug_hunter.py  chat_context_enrich.py  chat_mode.py  chat_reply.py  collector.py  context.py  llm_experts.py  quality_expert.py  router.py  security_analysis.py  security_expert.py  static_analysis.py  synthesis.py  tools_parallel.py
backend/graph/nodes/specialists/: __init__.py  api_expert_llm.py  db_expert_llm.py  security_expert_llm.py
backend/graph/tools/: __init__.py  ast_tool.py  ast_tools.py  bandit_tool.py  radon_tool.py  security_tools.py  semgrep_tool.py
backend/models/: state.py
backend/prompts/: bug_expert_system.md  expert_templates.py  loader.py  quality_expert_system.md  router_system.md  security_expert_system.md  synthesis_system.md  tool_instructions.md
backend/prompts/specialists/: api.md  database.md  security.md
backend/tests/: conftest.py  test_api_explain.py  test_graph_nodes.py  test_tools_security.py
backend/tools/: security_tooling.py
code-docs/: frontend-changes.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/editor/: route.ts
frontend/app/api/history/: route.ts
frontend/app/api/review/: route.ts
frontend/app/api/threads/: route.ts
frontend/app/api/threads/[id]/: route.ts
frontend/components/: AnalyzeForm.tsx  Chat.tsx  ChatInterface.tsx  ChatbotUI.tsx  CodeEditor.tsx  EditorAI.tsx  MemoryPanel.tsx  ProgressBar.tsx  Providers.tsx  ReviewPanel.tsx  ThreadDetails.tsx  ThreadSidebar.tsx
frontend/components/ui/: card.tsx  progress.tsx
frontend/lib/: chatClient.ts  streamingClient.ts
frontend/lib/hooks/: useSSEStream.ts
frontend/src/: App.tsx  CodeExplainer.tsx  index.css
