[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-explanation-agent"
version = "0.1.0"
description = "AI multi-agent code reviewer using OpenAI, LangGraph, and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    # LangGraph core; SQLite checkpointer is optional (see extras below)
    "langgraph==0.6.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.80",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.13",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "radon>=6.0.1",
    "bandit>=1.7.9",
    "vulture>=2.10", # optional; dead code finder
    "qdrant-client>=1.9.0",
    "semgrep>=1.62.0",
    "sqlalchemy>=2.0.30",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "langchain-qdrant>=1.1.0",
]

[project.optional-dependencies]
# Optional SQLite checkpointer for LangGraph persistence.
# Enable via `LANGGRAPH_CHECKPOINTER=1` and install with one of:
#   pip install langgraph-checkpoint-sqlite
#   pip install .[checkpointer]
checkpointer = [
    # Keep unpinned to allow compatible releases; app guards runtime imports
    "langgraph-checkpoint-sqlite>=0.1.0",
]

[tool.setuptools.packages.find]
# Explicitly list top-level packages in flat layout
include = ["app*", "graph*", "models*", "prompts*", "tools*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "S",   # flake8-bandit (lightweight security checks)
  "C90", # mccabe complexity warnings
  "SIM", # flake8-simplify
  "RUF", # Ruff-specific rules
]
ignore = [
  "S603",  # subprocess without shell=True is generally fine in controlled tools
  "S607",  # allow semgrep/bandit commands
  "E402",  # allow module docstrings before imports and multi-block imports
  "E501",  # allow longer lines in prompts and messages
  "S101",  # allow asserts in tests
  "S104",  # host binding in local dev
  "S110",  # broad try/except patterns acceptable in tooling
  "S112",  # try/except/continue patterns acceptable in parsing
  "C901",  # allow higher complexity in early iteration
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]
"app/core/config.py" = ["RUF009"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "-q"
